@@ -1,5 +1,6 @@
 2003-03-29 1.2.07 Jeekay
 * Added logging of admin login/logouts and login failures
+* Fixed inconsistancy for level 1 in ADMINCMDS
 * Bumped version to 1.2.07
 
 2003-02-21 1.2.06 Jeekay
